--- a/src/app/pokemon/detail-pokemon/detail-pokemon.component.html
+++ b/src/app/pokemon/detail-pokemon/detail-pokemon.component.html
@@ -37,6 +37,7 @@
         </div>
         <div class="card-action">
           <a (click)="goToList()">Retour</a>
+          <a (click)="goToEdit(pokemon.id)">Editer</a>
         </div>
       </div>
     </div>
