--- a/src/app/pokemon/detail-pokemon/detail-pokemon.component.html
+++ b/src/app/pokemon/detail-pokemon/detail-pokemon.component.html
@@ -1,10 +1,10 @@
 <!-- Chapitre 6 : Les Routes --> 
 <div *ngIf="pokemon" class="row">
     <div class="col s12 m8 offset-m2">
-    <h2 class="header center">{{ pokemon.name }}</h2>
+    <h2 class="header center">{{ pokemon.Name }}</h2>
     <div class="card horizontal hoverable">
       <div class="card-image">
-        <img [src]="pokemon.picture">
+        <img [src]="pokemon.Picture">
       </div>
       <div class="card-stacked">
         <div class="card-content">
@@ -12,32 +12,32 @@
             <tbody>
               <tr>
                 <td>Nom</td>
-                <td><strong>{{ pokemon.name }}</strong></td>
+                <td><strong>{{ pokemon.Name }}</strong></td>
               </tr>
               <tr>
                 <td>Points de vie</td>
-                <td><strong>{{ pokemon.hp }}</strong></td>
+                <td><strong>{{ pokemon.Hp }}</strong></td>
               </tr>
               <tr>
                 <td>Dégâts</td>
-                <td><strong>{{ pokemon.cp }}</strong></td>
+                <td><strong>{{ pokemon.Cp }}</strong></td>
               </tr>
               <tr>
                 <td>Types</td>
                 <td>
-                  <span *ngFor="let type of pokemon.types" class="{{ type | pokemonTypeColor }}">{{ type }}</span>
+                  <span *ngFor="let type of pokemon.Types" class="{{ type | pokemonTypeColor }}">{{ type }}</span>
                 </td>
               </tr>
               <tr>
                 <td>Date de création</td>
-                <td><em>{{ pokemon.created | date:"dd/MM/yyyy" }}</em></td>
+                <td><em>{{ pokemon.Created | date:"dd/MM/yyyy" }}</em></td>
               </tr>
             </tbody>
           </table>
         </div>
         <div class="card-action">
           <a (click)="goToList()">Retour</a>
-          <a (click)="goToEdit(pokemon.id)">Editer</a>
+          <a (click)="goToEdit(pokemon.Id)">Editer</a>
         </div>
       </div>
     </div>
