--- a/src/app/pokemon/list-pokemon/list-pokemon.component.html
+++ b/src/app/pokemon/list-pokemon/list-pokemon.component.html
@@ -3,14 +3,14 @@
         <div *ngFor="let pokemon of pokemonList" class="col m4 s6">
             <div class="card horizontal" pkmnBorderCard (click)="goDetail(pokemon)">
                 <div class="card-image">
-                    <img [src]="pokemon.picture" />
+                    <img [src]="pokemon.Picture" />
                 </div>
                 <div class="card-stacked">
                     <div class="card-content">
-                        <p>{{ pokemon.name }}</p>
-                        <p><small>{{ pokemon.created | date: 'dd/MM/yyyy' }}</small></p>
+                        <p>{{ pokemon.Name }}</p>
+                        <p><small>{{ pokemon.Created | date: 'dd/MM/yyyy' }}</small></p>
                         <span 
-                            *ngFor="let type of pokemon.types" 
+                            *ngFor="let type of pokemon.Types" 
                             class="{{ type | pokemonTypeColor }}"
                         >
                             {{ type }}
